# MFIK

./: README.md  main.py  porposal.md  pyproject.toml
docs/: algorithm.md
mfik/: __init__.py  dataset.py  dataset_generator.py  evaluate.py  loss.py  model.py  requirements.txt  robot_fk.py  train.py  urdf.py
openspec/changes/implement-meanflow-ik/: design.md  proposal.md  tasks.md
openspec/changes/implement-meanflow-ik/specs/ik-solver/: spec.md
src/meanflow_ik/: model.py  robot.py  train.py
